# AR-VR-Refactored

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: CODEOWNERS
data/: camera_calibration.json
data/MobilTech_01/: 000000001.pcd  calib.txt  main.cpp  사용방법.txt
data/MobilTech_02/: 000000.pcd  calibkcity.txt
doc/uml/: StarUML.uml
projects/OpenGL_Tutorials/01_Hello_World_(GLFW)/: main.cpp
projects/OpenGL_Tutorials/01_Hello_World__GLFW/: CMakeLists.txt  main.cpp
projects/OpenGL_Tutorials/02_Window__GLAD/: CMakeLists.txt  main.cpp
projects/OpenGL_Tutorials/03_Window_(Refactoring)/: CMakeLists.txt  main.cpp
projects/OpenGL_Tutorials/03_Window__Refactoring/: CMakeLists.txt  window.cpp
projects/OpenGL_Tutorials/04_Window_(User_Input)/: CMakeLists.txt
projects/OpenGL_Tutorials/04_Window__User_Input/: CMakeLists.txt  CMakeLists_backup.txt  main.cpp  main_backup.cpp
projects/OpenGL_Tutorials/05_Triangles_(VAO_VBO_VAP)/: 01_main_triangle.cpp  03_main_rectangle.cpp  04_main_rectangle_w_shader.cpp  util_shader.hpp
projects/OpenGL_Tutorials/05_Triangles__VAO_VBO_VAP/: 01_main_triangle.cpp  02_main_rectangle.cpp  02_main_triangle_w_shader.cpp  CMakeLists.txt  mesh.cpp  mesh.hpp
projects/OpenGL_Tutorials/06_Rectangle__EBO/: CMakeLists.txt  main_rectangle.cpp
projects/OpenGL_Tutorials/07_Orange_Triangle_HW_Template/: 01_main_two_orange_triangles.cpp  03_main_one_orange_and_one_yellow_triangles.cpp  CMakeLists.txt  default.vs  yellow.fs
projects/OpenGL_Tutorials/07_Orange_Triangle__Vertex_Fragment_Shaders/: CMakeLists.txt  default.vs
projects/OpenGL_Tutorials/07_Rectangle_(EBO)/: window.hpp
projects/OpenGL_Tutorials/07_Rectangle__EBO/: 01_main_rectangle.cpp  02_main_rectangle_w_shader.cpp  CMakeLists.txt
projects/OpenGL_Tutorials/08_Orange_Triangle_(Vertex_Fragment_Shaders)/: CMakeLists.txt  main.cpp  mesh.cpp  shader.cpp
projects/OpenGL_Tutorials/08_Orange_Triangle__Vertex_Fragment_Shaders/: CMakeLists.txt  main.cpp  orange.frag
projects/OpenGL_Tutorials/08_Red_Triangle__GLSL_In_Out/: CMakeLists.txt
projects/OpenGL_Tutorials/09_Greenish_Triangle_HW_Template/: 03_main.cpp  CMakeLists.txt  default.fs  pass_red_color.vs
projects/OpenGL_Tutorials/09_Greenish_Triangle__GLSL_Uniform/: CMakeLists.txt  main.cpp  uniform_color.fs
projects/OpenGL_Tutorials/09_Red_Triangle__GLSL_In_Out/: main.cpp  window.cpp
projects/OpenGL_Tutorials/10_Colorful_Triangle_HW_Template/: 01_main.cpp  02_main.cpp  CMakeLists.txt  default.fs  pass_color.vs
projects/OpenGL_Tutorials/10_Colorful_Triangle__GLSL_layout_location/: 02_main.cpp  CMakeLists.txt
projects/OpenGL_Tutorials/10_HW_Template/: 01_main.cpp  CMakeLists.txt  pass_red_color.vs
projects/OpenGL_Tutorials/10_Red_Triangle_(GLSL_In_Out)/: CMakeLists.txt  mesh.hpp  shader.hpp
projects/OpenGL_Tutorials/10_Red_Triangle__GLSL_In_Out/: CMakeLists.txt  default.frag
projects/OpenGL_Tutorials/11_Brick_Triangle__Texture/: 01_main.cpp  02_main.cpp  CMakeLists.txt  pass_texCoords.vs  texture.fs
projects/OpenGL_Tutorials/11_Greenish_Triangle__GLSL_Uniform/: CMakeLists.txt
projects/OpenGL_Tutorials/12_Disco_Brick_Triangle__Texture_Color/: CMakeLists.txt  main.cpp  pass_color_texCoords.vs  texture_and_color.fs
projects/OpenGL_Tutorials/13_Colorful_Triangle__GLSL_layout_location/: 01_main.cpp  CMakeLists.txt  default.fs
projects/OpenGL_Tutorials/13_Smiling_Wooden_Rectangle__Texture_Units/: CMakeLists.txt  main.cpp  pass_texCoords.vs
projects/OpenGL_Tutorials/14_Transformed_Rectangle_in_2D__Model/: CMakeLists.txt  main.cpp  transform_pass_texCoords.vs
projects/OpenGL_Tutorials/15_Brick_Triangle__Texture/: 01_main.cpp  02_main.cpp  CMakeLists.txt  pass_texCoords.vs  texture.fs
projects/OpenGL_Tutorials/15_Rotating_Rectangle_in_2D__Model_Uniform/: CMakeLists.txt  main.cpp  transform_pass_texCoords.vs
projects/OpenGL_Tutorials/16_Transformed_Rectangle_in_3D__Model_View_Projection/: CMakeLists.txt  main.cpp  model_view_projection_pass_texCoords.vs  two_textures.fs
projects/OpenGL_Tutorials/17_Rotating_Cube_in_3D_without_Z_Buffer__3D_Cube/: CMakeLists.txt  main.cpp
projects/OpenGL_Tutorials/17_Transformed_Rectangle_in_3D__Model_View_Projection/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
projects/OpenGL_Tutorials/18_Rotating_Cube_in_3D_with_GL_DEPTH_TEST/: CMakeLists.txt  main.cpp
projects/OpenGL_Tutorials/19_Many_Cubes_in_3D__Many_Models/: 01_main.cpp  02_main.cpp  CMakeLists.txt  model_view_projection_pass_texCoords.vs
projects/OpenGL_Tutorials/20_Rotating_Camera__View_lookAt/: CMakeLists.txt  main.cpp  model_view_projection_pass_texCoords.vs
projects/OpenGL_Tutorials/21_Translating_Camera__Keyboard_Input/: CMakeLists.txt
projects/OpenGL_Tutorials/22_Moving_Camera__Mouse_Input/: CMakeLists.txt  main.cpp  two_textures.fs
projects/OpenGL_Tutorials/99_SWAN/: CMakeLists.txt  main copy.cpp  main.cpp
projects/Pointcloud_Visualization/01_PCL_CloudViewer/: CMakeLists.txt  main.cpp
projects/Pointcloud_Visualization/02_OpenGL_CloudViewer/: CMakeLists.txt  main.cpp  model_view_projection.vs  model_view_projection_pointSize.vs  white.fs
projects/Pointcloud_Visualization/04_Render_to_Texture__Vertex_Shader/: CMakeLists.txt  main copy.cpp  main.cpp  main_01.cpp  main_02.cpp  multiple_model_view_distorted_projections_pointSize.vs  multiple_model_view_projections.vs  multiple_model_view_projections_pointSize.vs  projected_color.fs
projects/Pointcloud_Visualization/05_Intel_RealSense_Capture/: CMakeLists.txt  example.hpp  main copy.cpp
projects/Pointcloud_Visualization/06_Intel_RealSense_ImageViewer/: CMakeLists.txt  main.cpp  single_texture.fs
projects/Pointcloud_Visualization/08_OpenGL_Intel_RealSense_CloudViewer/: CMakeLists.txt  main.cpp  model_view_projection_pointSize_PCL_XYZRGB.vs  vertex_color.fs
projects/Pointcloud_Visualization/10_Compute_Shader/: CMakeLists.txt  ray_tracing.cs
projects/Pointcloud_Visualization/12_OpenGL_RGB_LiDAR/: CMakeLists.txt  model_view_projection.vs  white.fs
(+17 files in other folders)
